--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,8 +3,21 @@ security:
     password_hashers:
         App\Entity\User:
             algorithm: auto
+
     firewalls:
         main:
-           form_login:
-                login_path: login
-                check_path: login        
+           entry_point: App\Security\LoginFormAuthenticator
+           custom_authenticator: App\Security\LoginFormAuthenticator
+           logout:
+              path: app_logout
+              # where to redirect after logout
+              # target: app_any_route
+    access_control:
+    - { path: ^/boardgame, roles: ROLE_USER }      
+
+    providers:
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
