--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
         "@babel/preset-env": "^7.16.0",
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
-        "@symfony/webpack-encore": "^4.0.0",
+        "@symfony/webpack-encore": "^2.1.0",
+        "autoprefixer": "^10.4.14",
         "core-js": "^3.23.0",
         "glob-all": "^3.3.1",
         "path": "^0.12.7",
+        "postcss": "^8.4.23",
         "postcss-loader": "^7.2.4",
         "purgecss-webpack-plugin": "^5.0.0",
         "regenerator-runtime": "^0.13.9",
-        "tailwindcss": "^3.3.1",
+        "tailwindcss": "^2.2.2",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
@@ -25,6 +27,6 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "autoprefixer": "^10.4.14"
+        "yaml": "^2.2.2"
     }
 }
