--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,7 +13,7 @@ security:
               # where to redirect after logout
               # target: app_any_route
     access_control:
-    - { path: ^/boardgame, roles: ROLE_USER }      
+    - { path: ^/boardgames, roles: ROLE_USER }      
 
     providers:
         # used to reload user from session & other features (e.g. switch_user)
