redirect to login after logout

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,7 +11,7 @@ security:
            logout:
               path: app_logout
               # where to redirect after logout
-              # target: app_any_route
+              target: app_login
     access_control:
     - { path: ^/boardgames, roles: ROLE_USER }      
 
